--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^7.0.3",
     "axios": "^1.7.7",
     "expo": "~52.0.7",
+    "expo-av": "^15.0.1",
     "expo-constants": "~17.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
